syntax = "proto3";

package scalekit.v1.events;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "scalekit/v1/commons/commons.proto";
import "scalekit/v1/options/options.proto";

option go_package = "github.com/scalekit-inc/scalekit/pkg/grpc/events";

service EventsService {
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {
    option (scalekit.v1.options.auth_option) = {authentication_type: WORKSPACE_SESSION_CUSTOMER_PORTAL_CLIENT};

    option (google.api.http) = {
      post: "/api/v1/events"
      body: "filter"
    };
  }

  rpc SendCustomEvent(SendCustomEventRequest) returns (SendCustomEventResponse) {
    option (scalekit.v1.options.auth_option) = {authentication_type: WORKSPACE_SESSION_CUSTOMER_PORTAL};
    option (google.api.http) = {
      post: "/api/v1/events/frontend_events/{event_type}"
      body: "event"
    };
  }
}

message SendCustomEventRequest {
  string event_type = 1 [(buf.validate.field).required = true];
  google.protobuf.Struct event = 2;
}

message SendCustomEventResponse {
  string event_id = 1;
}

message IEventPaginationTokens {
  string NextPage = 1;
  string PreviousPage = 2;
  uint32 Total = 3;
}

message ListEventsRequest {
  EventFilter filter = 1;
  uint32 page_size = 2;
  string page_token = 3;
}

message ListEventsResponse {
  repeated ScalekitEvent events = 1;
  string next_page_token = 2;
  string prev_page_token = 3;
  uint32 total_size = 4;
}

message IEvent {
  string spec_version = 1;
  string id = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 32
  }];
  string type = 3;
  google.protobuf.Timestamp occurred_at = 4;
  Actor actor = 5;
  string tenant_id = 6;
  Target target = 7;
  string source = 8;

  google.protobuf.Struct data = 9;
  google.protobuf.Struct old_data = 10;

  map<string, string> context = 11 [(buf.validate.field).map = {
    keys: {
      string: {
        min_len: 3
        max_len: 25
      }
    }
    values: {
      string: {
        min_len: 1
        max_len: 2000
      }
    }
  }];
  map<string, string> metadata = 12 [(buf.validate.field).map = {
    keys: {
      string: {
        min_len: 3
        max_len: 25
      }
    }
    values: {
      string: {
        min_len: 1
        max_len: 2000
      }
    }
  }];
}

message Event {
  string spec_version = 1;
  string id = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 32
  }];
  string type = 3;
  google.protobuf.Timestamp occurred_at = 4;
  Actor actor = 5;
  string tenant_id = 6;
  Target target = 7;
  string source = 8;

  google.protobuf.Struct data = 9;
  google.protobuf.Struct old_data = 10;

  map<string, string> context = 11 [(buf.validate.field).map = {
    keys: {
      string: {
        min_len: 3
        max_len: 25
      }
    }
    values: {
      string: {
        min_len: 1
        max_len: 2000
      }
    }
  }];
  map<string, string> metadata = 12 [(buf.validate.field).map = {
    keys: {
      string: {
        min_len: 3
        max_len: 25
      }
    }
    values: {
      string: {
        min_len: 1
        max_len: 2000
      }
    }
  }];

  ObjectType object = 13;
}

message Actor {
  string id = 1;
  EventActor type = 2;
}

message Target {
  string id = 1;
  EventTarget type = 2;
}

enum EventActor {
  ACTOR_UNSPECIFIED = 0;
  HUMAN = 1;
  MACHINE = 2;
  API = 3;
}

enum Source {
  SOURCE_UNSPECIFIED = 0;
  SCALEKIT = 1;
  DIR_SYNC = 2;
}

enum EventTarget {
  EVENT_TARGET_UNSPECIFIED = 0;
  WORKSPACE = 1;
  ENVIRONMENT = 2;
  ORGANIZATION = 3;
  USER = 4;
  SESSION = 5;
  TEMPLATE = 6;
  EMAIL_SERVER = 7;
  EMAIL = 8;
  CONNECTED_ACCOUNT = 9;
}

message IEventFilter {
  repeated string event_types = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  string tenant_id = 4;
  Target target = 5;
  Source source = 6;

  map<string, string> metadata = 7 [(buf.validate.field).map = {
    keys: {
      string: {
        min_len: 3
        max_len: 25
      }
    }
    values: {
      string: {
        min_len: 1
        max_len: 2000
      }
    }
  }];

  repeated string internal_events = 8;
}

message EventFilter {
  repeated string event_types = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  string organization_id = 4;
  Source source = 5;
  string auth_request_id = 6;
  // map<string, string> metadata = 7 [(buf.validate.field).map = {
  //  keys: {
  //    string: {
  //      min_len: 3
  //      max_len: 25
  //    }
  //  }
  //  values: {
  //    string: {
  //      min_len: 1
  //      max_len: 2000
  //    }
  //  }
  // }];
  //  optional MetadataFilter metadata_filter = 6;
}
//
//enum MetadataFilter {
//  METADATA_FILTER_UNSPECIFIED = 0;
//  WORKSPACE_ID = 1;
//  ENVIRONMENT_ID = 2;
//  ORGANIZATION_ID = 3;
//  USER_ID = 4;
//  CONNECTION_ID = 5;
//  SCIM_DIRECTORY_ID = 6;
//  SCIM_RESOURCE_ID = 7;
//}
//
//message FilterCondition {
//  string field = 1;
//  string value = 2;
//}
//
//enum operation {
//  EQUAL = 0;
//  NOT_EQUAL = 1;
//}

enum EventCategory {
  EVENT_SOURCE_UNSPECIFIED = 0;
  CORE = 1; // Org, Usr , Org.Domain
  SSO = 2; // Conn , SocialConn, Conn.Enabled, Conn.Disabled
  DIRSYNC = 3; // DirUser, DirGroup , Directory, Directory.Enabled, Directory.Disabled
}

enum ObjectType {
  OBJECT_TYPE_UNSPECIFIED = 0;
  Workspace = 1;
  Environment = 2;
  Organization = 3;
  Connection = 4;
  User = 5;
  Role = 6;
  CustomAttributes = 7;
  Directory = 8;
  DirectoryUser = 9;
  DirectoryGroup = 10;
  Session = 11;
  Template = 12;
  Job = 13;
  Domain = 14;
  EmailServer = 15;
  Email = 16;
  AuthRequest = 17;
  SAMLRequest = 18;
  SAMLResponse = 19;
  TokenClaims = 20;
  OIDCReqParams = 21;
  OIDCRespClaims = 22;
  SSOError = 23;
  GenericError = 24;
  RefreshTokens = 25;
  EndSessionRequest = 26;
  LogoutTokenClaims = 27;
  OAuthResponse = 28;
  JSON = 29;
  SKErrors = 30;
  OrgMembership = 31;
  UserProfile = 32;
  IDPInitiatedPayload = 33;
  DeviceDetails = 34;
  Actions = 35;
}

message ScalekitEvent {
  string spec_version = 1;
  string id = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 32
    prefix: "evt"
  }];
  string type = 3; // Not adding a enum for forward compatibility
  google.protobuf.Timestamp occurred_at = 4;
  reserved 5;
  string environment_id = 6;
  optional string organization_id = 7;
  ObjectType object = 8;

  google.protobuf.Struct data = 9; // JSON - No Schema { id , object_type, data }
  string display_name = 10;
}
